--- a/index.html
+++ b/index.html
@@ -16,105 +16,7 @@
         </nav>
     </header>
     <main>
-        <article class="content">
-            <section class="fishList">
-
-
-                <div class="fish">
-                    <div><img class="fish__image"
-                            src="https://s-media-cache-ak0.pinimg.com/736x/68/34/8d/68348d8e60df18e1caa08328570b1863.jpg"
-                            alt=""></div>
-                    <div class="fish__name">Sam</div>
-                    <div><button id="button--sam">Details</button></div>
-
-                    <dialog class="dialog--fish" id="details--sam">
-                        <div>Species: Betta</div>
-                        <div>Location: Japan</div>
-                        <div>Food: Insects and tadpoles</div>
-
-                        <button class="button--close" id="close-sam">Close Dialog</button>
-                    </dialog>
-                </div>
-
-
-
-                <div class="fish">
-                    <div><img class="fish__image"
-                            src="https://s-media-cache-ak0.pinimg.com/736x/e1/b0/85/e1b085bef6cca332b0883842f85bdb3a.jpg"
-                            alt=""></div>
-                    <div class="fish__name">Mike</div>
-                    <div><button id="button--mike">Details</button></div>
-
-                    <dialog class="dialog--fish" id="details--mike">
-                        <div>Species: Emperor Angelfish</div>
-                        <div>Location: Caribbean</div>
-                        <div>Food: Algae, crustaceans</div>
-
-                        <button class="button--close" id="close-mike">Close Dialog</button>
-                    </dialog>
-                </div>
-
-
-
-
-                <div class="fish">
-                    <div><img class="fish__image"
-                            src="https://cdn.pixabay.com/photo/2017/12/26/22/00/fish-3041507__180.jpg"
-                            alt=""></div>
-                    <div class="fish__name">Noodle</div>
-                    <div><button id="button--noodle">Details</button></div>
-
-                    <dialog class="dialog--fish" id="details--noodle">
-                        <div>Species: Red Discus</div>
-                        <div>Location: Caribbean</div>
-                        <div>Food: Algae, crustaceans</div>
-
-                        <button class="button--close" id="close-noodle">Close Dialog</button>
-                    </dialog>
-                </div>
-
-
-
-
-                <div class="fish">
-                    <div><img class="fish__image"
-                            src="https://thumbs.dreamstime.com/t/fish-fishtank-20727469.jpg"
-                            alt=""></div>
-                    <div class="fish__name">Erroll</div>
-                    <div><button id="button--erroll">Details</button></div>
-
-                    <dialog class="dialog--fish" id="details--erroll">
-                        <div>Species: Angelfish</div>
-                        <div>Location: Caribbean</div>
-                        <div>Food: Algae, crustaceans</div>
-
-                        <button class="button--close" id="close-erroll">Close Dialog</button>
-                    </dialog>
-                </div>
-
-
-
-
-                <div class="fish">
-                    <div><img class="fish__image"
-                            src="https://3.imimg.com/data3/IW/XT/GLADMIN-105863/fish-125x125.jpg"
-                            alt=""></div>
-                    <div class="fish__name">Bart</div>
-                    <div><button id="button--bart">Details</button></div>
-
-                    <dialog class="dialog--fish" id="details--bart">
-                        <div>Species: Orange Clownfish</div>
-                        <div>Location: Caribbean</div>
-                        <div>Food: Algae, crustaceans</div>
-
-                        <button class="button--close" id="close-bart">Close Dialog</button>
-                    </dialog>
-                </div>
-
-
-            </section>
-            <aside class="tips"></aside>
-        </article>
+        <article class="content"></article>
     </main>
 
     <script type="module" src="./scripts/main.js"></script>
